	added framework for getDbs/Tables/Columns and selectDatabase
	added framework for rewriting queries and bind vars and dynamic
		translation of one bind var format to another
	added feature to emulate transaction blocks in databases that don't
		support them
	added feature to drop temporary tables at the end of the session for
		oracle
	added string inputBind method/function with length

0.43 - updated ruby code build to take sitearch into account during includes
	updated ruby code to map STR2CSTR to StringValuePtr for ruby 1.9
	updated to use rudiments' updated signalclasses
	replaced calls to fork() and exit() with process class calls
	updated ruby detection in configure script
	added a test for Python.h to the configure script
	updated tcl detection
	updated db2 detection
	added sed command to remove -arch args from perl build (for osx)
	added charset support for all db's who's client libraries support them
	updated detection of various languages and db's on various platforms
	added getting started with odbc doc
	updated faq with info about result sets from stored procedures

0.42 - fixed a bug causing cursor id's not to get set for some db's
	updated configure script to look for client64 in addition to client
		for oracle intantclient on x86_64
	added setTimeout to all API's
	applied some patches from Alexey Leontev
	bumped BINDVARLENGTH up to 64
	applied Renat Sabitov's scaler -debug patch and 11g configure patch
	applied Stephan van Egmond's sqlrsh history patch
	added configure test for gmake, use it to find ruby.h
	applied mingang@taobao.com's scaler patch for -debug
	added getting started notes for Oracle 11.2 on Fedora Core 12
	added test for mdb_sql_run_query and code to use it if it's there
	fixed a bug that caused ping to fail after reconnecting to sybase
	added configure test for xsubpp
	fixed perl dbi inout bind problem
	fixed code that was adding a NULL terminator to oracle clob values
	applied several patches from Renat Sabitov