@@ -9,6 +9,8 @@
 	added feature to drop temporary tables at the end of the session for
 		oracle
 	added string inputBind method/function with length
+	added feature to preserve rows on commit by default with oracle temp
+		tables
 
 0.43 - updated ruby code build to take sitearch into account during includes
 	updated ruby code to map STR2CSTR to StringValuePtr for ruby 1.9
